# gh-pre

./: .coveragerc  .pre-commit-config.yaml  LICENSE.txt  README.md  cspell.config.yaml  gh-pre  pyproject.toml  tox.ini
.config/: dictionary.txt  requirements.txt  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: ack.yml  release.yml  tox.yml
src/gh_pre/: __main__.py
tests/: test_app.py
